# check

./: CMakeLists.txt  contains.cpp  main.cpp  tests.cpp
